fix: try fix height on mobile device

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,6 @@ html {
     @apply text-white;
     @apply bg-purple-ultraDark;
     height: -webkit-fill-available;
-
 }
 
 body {
@@ -16,6 +15,14 @@ body {
     /* mobile viewport bug fix */
     min-height: -webkit-fill-available;
 }
+
+/* Avoid Chrome to see Safari hack */
+@supports (-webkit-touch-callout: none) {
+    body {
+      /* The hack for Safari */
+      height: -webkit-fill-available;
+    }
+  }
 
 /* FONTS IMPORT */
 @font-face {
